# goit-python-web-hw11-notebook

./: .gitignore  README.md  contacts.py  crud.py  main.py  models.py  pyproject.toml  schemas.py
migrations/: env.py
migrations/versions/: 1e819d83cb55_notebook.py
src/db/: database.py  models.py
src/repository/: contacts.py
src/routes/: contacts.py
src/schemas/: contacts.py
